password change field

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -32,8 +32,33 @@
                 </div>
               </div>
               <div class="alert error-message">{{message}}</div>
+              
+              <form class="form-inline">
+                <div class="form-group">
+                  <label for="OldPassword6">Old Password</label>
+                  <input type="password" id="Old Password6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
+                  <small id="oldpasswordHelpInline" class="text-muted">             
+                  </small>
+                </div>
+              </form>
+              <form class="form-inline">
+                <div class="form-group">
+                  <label for="NewPassword6">New Password</label>
+                  <input type="password" id="New Password6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
+                  <small id="newpasswordHelpInline" class="text-muted">             
+                  </small>
+                </div>
+              </form>
+              <form class="form-inline">
+                <div class="form-group">
+                  <label for="ConfirmPassword6">Confirm Password</label>
+                  <input type="password" id="Old Password6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
+                  <small id="confirmpasswordHelpInline" class="text-muted">             
+                  </small>
+                </div>
+              </form>
               <div class="text-center">
-                <button [disabled] = 'forgotForm.invalid' type="submit" class="btn btn-primary my-4">Reset</button>
+                <button [disabled] = 'forgotForm.invalid' type="submit" class="btn btn-primary my-4">Update</button>
               </div>
             </form>
           </div>
