--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -17,6 +17,9 @@
               </div>
             </div>
           </div>
+          <div>
+                   <a [routerLink]="['/forgot-password']"class="text-light">Change Password</a>
+          </div>
           <div class="card-body">
             <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
               <h6 class="heading-small text-muted mb-4">User information</h6>
