--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -50,6 +50,9 @@
               <div *ngIf="(request.touched || request.dirty) && request.invalid && request.errors.required">
                 Message is required.
               </div>
+              <div *ngIf="(request.touched || request.dirty) && request.invalid && request.errors.maxlength">
+                Max Character size is {{max_characters}}.
+              </div>
             </div>
             <textarea formControlName="request" ng-model = "x" maxlength="5000" class="form-control" [ngClass]="{'is-invalid': request.touched && request.errors}" id="message" rows="6"></textarea>
             </div>
