--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div>
-                   <a [routerLink]="['/forgot-password']"class="text-light">Change Password</a>
+                   <a [routerLink]="['/change-password']" routerLinkActive="active" class="text">Change Password</a>
           </div>
           <div class="card-body">
             <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
