--- a/src/app/pages/request-detail/request-detail.component.html
+++ b/src/app/pages/request-detail/request-detail.component.html
@@ -55,8 +55,7 @@
             <app-comments [object_id]="request_id"></app-comments>
           </div>
         </div>
-
-        <ng-template #thenBlock>ß
+        <ng-template #thenBlock>
           <div class="row">
             <div class="col-md text-right">
               <button *ngIf="!request_already_picked" type="button" class="btn btn-success" (click)="taskPicked()">I Can
