--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -70,7 +70,7 @@
             </span>
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                  <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
                 <input formControlName="password" class="form-control" placeholder="password" type="password">
               </div>
