adding style to edit profile message

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -80,7 +80,7 @@
               <div *ngIf="editable" class="row">
                 <div class="col-4 text-right">
                     <button type="submit" class="btn btn-sm btn-primary">Edit</button>
-                    <div>{{message}}</div>
+                    <div class='success'>{{message}}</div>
                 </div>
               </div>
               <hr class="my-4" />
