Addin label for the request types

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -110,7 +110,13 @@
           </div>
           <div class="row align-items-center">
             <div class="col">
-              <h3 class="mb-0">Active Requests</h3>
+              <h3 class="mb-0">Placed Requests</h3>
+            </div>
+            <div class="col">
+              <h3 class="mb-0">Picked Requests</h3>
+            </div>
+            <div class="col">
+              <h3 class="mb-0">Removed Requests</h3>
             </div>
           </div>
         </div>
