--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -113,7 +113,7 @@
               <h3 class="mb-0">Placed Requests</h3>
             </div>
             <div class="col">
-              <h3 class="mb-0">Picked Requests</h3>
+              <a href="['/picked-requests']">Picked Requests</a>
             </div>
             <div class="col">
               <h3 class="mb-0">Removed Requests</h3>
