--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -77,6 +77,17 @@
                   </div>
                 </div>
               </div>
+              <div class="navbar">
+                <div class="dropdown">
+                  <button class="dropbtn">Gender
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="#">Female</a>
+                    <a href="#">Male</a>
+                  </div>
+                </div>
+              </div>
               <div *ngIf="editable" class="row">
                 <div class="col-4 text-right">
                     <button type="submit" class="btn btn-sm btn-primary">Edit</button>
